# FEA-Bench

./: .gitignore  README.md  datasetcard.md  instances_lite.json  pyproject.toml  swe-bench.diff
.github/workflows/: codeql.yml
examples/: run_eval_gold.sh  run_get_dataset.sh  run_prediction_deepseek.sh  run_prediction_openai.sh  run_prediction_vllm.sh  setup_eval.sh
feabench/: get_dataset.py  get_gold_results.py  run_prediction.py
feabench/collect/: make_instructions.py  utils.py
feabench/prediction/: patch_process.py  prediction_openai.py  prediction_vllm.py  tokenizer_online.py
