[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "feabench"
version = "0.1"  
description = "FEA-Bench: A Benchmark for Evaluating Repository-Level Code Generation for Feature Implementation."
license = { text = "MIT" }  
requires-python = ">=3.10"
dependencies = [
    "vllm==0.8.5",
    "tqdm",
    "datasets",
    "tenacity",
    "openai",
    "beautifulsoup4",
    "ghapi",
    "fastcore",
    "unidiff",
    "GitPython",
    "chardet"
]

[tool.setuptools]
packages = ["feabench"]  
